--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         <activity
             android:name=".LogoActivity"
             android:theme="@style/AppTheme.NoActionBar">
-            <!--iniciador-->
+
+            <!-- iniciador -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,9 +39,10 @@
             android:name=".VerAcontecimientoActivity"
             android:label="@string/title_activity_ver_acontecimiento"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".EventosActivity">
-
-        </activity>
+        <activity android:name=".EventosActivity"></activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
     </application>
 
 </manifest>
